# CDF-Kafka-MCP-Server

./: .gitignore  CLOUD_TESTING_SETUP.md  CONFIGURABLE_ENDPOINTS_IMPLEMENTATION_SUMMARY.md  CONFIGURATION_GUIDE.md  Dockerfile  KAFKA_CONNECT_API_INTEGRATION_FOR_CLOUDERA_AI_AGENT_STUDIO.md  KNOX_BEARER_TOKEN_SETUP.md  KNOX_INTEGRATION_SUMMARY.md  Makefile  README.md  claude_desktop_config.json.example  client.config  docker-compose.yml  kafka-simple-topology.xml  kafka-topology.xml  knox_kafka_setup.md  pyproject.toml  setup_cloud.sh  test_cloud_connection.py  test_mcp_tools.py
Testing/: .gitignore  CDP_CLOUD_TESTING.md  KNOX_INTEGRATION_TESTING.md  README.md  README_KNOX.md  add_value_to_mcptesttopic.py  cdp_cloud_mcp_test_results_1761261617.json  cdp_cloud_mcp_test_results_1761261935.json  cdp_cloud_mcp_test_results_1761262280.json  cdp_cloud_mcp_test_results_1761262489.json  cdp_cloud_mcp_test_results_1761262951.json  cdp_cloud_mcp_test_results_1761323002.json  cdp_cloud_mcp_test_results_1761323267.json  cdp_cloud_mcp_test_results_1761324150.json  cdp_cloud_mcp_test_results_1761324364.json  cdp_cloud_mcp_test_results_1761324628.json  cdp_cloud_working_mcp_test_results_1761323075.json  cdp_cloud_working_mcp_test_results_1761323251.json  cdp_cloud_working_mcp_test_results_1761324165.json  check_cdp_cloud_topics.py  check_connector_status.py  check_heartbeats_topic.py  check_topic_after_connector.py  check_topic_creation.py  comprehensive_cdp_discovery.py  create_cursortest_topic.py  create_http_source_connector.py  create_json_data_connector.py  create_topic_via_admin_api.py  create_topic_via_connector.py  debug_cdp_config.py  debug_kafka_client.py  discover_cdp_services.py  requirements.txt  run_cdp_cloud_tests.sh  run_cloud_tests.sh  run_full_tests.sh  run_knox_tests.sh  run_quick_tests.sh  run_tests.py  (+19 more)
config/: env_cloud_template.txt  env_example.txt  env_template.txt  kafka_config.example.yaml  kafka_config.yaml
examples/: example_usage.sh
src/cdf_kafka_mcp_server/: __init__.py  cdp_auth.py  cdp_client.py  cdp_kafka_client.py  cdp_rest_client.py  config.py  kafka_client.py  knox_client.py  knox_gateway.py  main.py  mcp_server.py  monitoring.py
tests/: __init__.py  test_config.py  test_integration.py
